--- a/src/app/layout/host/host.css
+++ b/src/app/layout/host/host.css
@@ -1,4 +1,4 @@
-.noscroll {
+/* .noscroll {
   max-height: 100vh !important;
   overflow: hidden;
   position: fixed;
@@ -6,4 +6,20 @@
   bottom: 0;
   left: 0;
   right: 0;
+} */
+
+.noscroll {
+  overflow: hidden;
+  /* position: fixed; */
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+@media (min-width: 1023px) {
+  .noscroll {
+    max-height: 100vh !important;
+    position: fixed !important;
+  }
 }
