--- a/src/app/components/calendar-settings/calendar-settings.css
+++ b/src/app/components/calendar-settings/calendar-settings.css
@@ -1,11 +1,16 @@
 .settings-panel {
-  height: 87vh;
+  /* height: 87vh; */
   background: white;
   overflow-y: auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-  z-index: 1000;
+  z-index: 50;
   padding: 24px;
   position: relative;
+}
+@media (min-width: 1024px) {
+  .settings-panel {
+    height: 87vh !important;
+  }
 }
 
 .close-btn {
