--- a/src/app/components/calendar/calendar.css
+++ b/src/app/components/calendar/calendar.css
@@ -2,12 +2,16 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
   background: white;
   margin: 0 auto;
-  height: 87vh;
+  /* height: 87vh; */
 
   display: flex;
   flex-direction: column;
 }
-
+@media (min-width: 1024px) {
+  .calendar-container {
+    height: 87vh !important;
+  }
+}
 .calendar-header {
   display: flex;
   justify-content: space-between;
@@ -462,4 +466,15 @@
 
   background: white;
   border-color: #ddd;
+}
+
+
+.booked {
+  background-color: #ff385c !important;
+  color: white !important;
+  cursor: not-allowed;
+  /* opacity: 0.6; */
+}
+.booked .day-number{
+  color: white !important;
 }
