--- a/src/app/layout/main-layout/main-layout.css
+++ b/src/app/layout/main-layout/main-layout.css
@@ -3,13 +3,19 @@
 }
 
 .noscroll {
-  max-height: 100vh !important;
   overflow: hidden;
-  position: fixed;
+  /* position: fixed; */
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
+}
+
+@media (min-width: 1023px) {
+  .noscroll {
+    max-height: 100vh !important;
+    position: fixed !important;
+  }
 }
 
 .nomt {
