--- a/src/app/pages/property-info/property-info.html
+++ b/src/app/pages/property-info/property-info.html
@@ -41,6 +41,7 @@
         <app-reverse-section 
           [dateMap]="dateMap"
           [propertyId]="propertyId"
+          [hostID]="hostID"
           [checkIn]="selectedDates.start"
           [checkOut]="selectedDates.end"
           [guests]="guestCount" 
