--- a/src/app/pages/add-property/step-1/step1-2-which-of/step1-2-which-of.html
+++ b/src/app/pages/add-property/step-1/step1-2-which-of/step1-2-which-of.html
@@ -2,7 +2,19 @@
   <div class="title-container">
     <h1 tabindex="-1">Which of these best describes your&nbsp;place?</h1>
   </div>
-  <div role="radiogroup" class="property-selector">
+  
+  <!-- Loading State -->
+  <div *ngIf="isLoading" class="loading-state">
+    Loading property types...
+  </div>
+
+  <!-- Error State -->
+  <div *ngIf="error" class="error-state">
+    {{ error }}
+  </div>
+
+  <!-- Property Types Grid -->
+  <div *ngIf="!isLoading && !error" role="radiogroup" class="property-selector">
     <div
       *ngFor="let type of propertyTypes; let i = index"
       class="property-item"
@@ -12,11 +24,11 @@
         type="button"
         role="radio"
         class="property-button"
-        [attr.aria-checked]="selectedType.name === type.name"
+        [attr.aria-checked]="selectedType?.id === type.id"
         (click)="selectType(type)"
       >
         <div class="icon-wrapper">
-          <img [src]="type.icon" [alt]="type.name" class="property-icon">
+          <img [src]="getPropertyTypeImg(type.iconURL)" [alt]="type.name" class="property-icon">
         </div>
         <div class="label-wrapper">
           <div class="property-label">{{ type.name }}</div>
