--- a/src/app/pages/update-list/property-type-section/property-type-section.html
+++ b/src/app/pages/update-list/property-type-section/property-type-section.html
@@ -26,8 +26,12 @@
           class="property-type-btn"
           [class.selected]="propertyTypeForm.get('propertyTypeId')?.value === type.id"
           (click)="selectPropertyType(type.id)">
-          <span>{{ type.name }}</span>
+          <div class="icon-wrapper">
+            <img [src]="type.iconURL" [alt]="type.name" class="property-icon" onerror="this.src='assets/images/deafult.png'">
+          </div>
+          <span class="property-label">{{ type.name }}</span>
           <svg *ngIf="propertyTypeForm.get('propertyTypeId')?.value === type.id" 
+               class="check-icon"
                width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
             <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
           </svg>
