--- a/src/app/components/reservation-box/reservation-box.css
+++ b/src/app/components/reservation-box/reservation-box.css
@@ -504,3 +504,23 @@
   margin: 0;
   font-size: 14px;
 }
+
+.btn-primary{
+  background: linear-gradient(135deg, #ff385c 0%, #e31c5f 100%) !important ;
+}
+.btn-primary:hover{
+  
+  background: linear-gradient(-135deg,#e31c5f 100% ,  #ff385c 0%) !important ;
+}
+
+.btn-secondary{
+  background: linear-gradient(135deg, #6b7280 0%, #4b5563 100%) !important;
+  background: linear-gradient(135deg, #475569 0%, #334155 100%) !important;
+background: linear-gradient(135deg, #94a3b8 0%, #64748b 100%) !important;
+
+
+}
+.btn-secondary:hover{
+  
+  background: linear-gradient(-135deg,  #64748b 100%,#94a3b8 0%) !important;
+}
