--- a/src/app/pages/messages/messages.html
+++ b/src/app/pages/messages/messages.html
@@ -16,13 +16,13 @@
     </div>
 
     <ng-container *ngIf="hasChatSelected">
-      <div [ngClass]="{'col-md-9': isHost, 'col-md-6': !isHost}" class="p-0">
+      <div [ngClass]="{'col-md-9': false, 'col-md-6': !isHost || isHost}" class="p-0">
         <app-chat-box
           [selectedChatSession]="selectedChatSession"
           [initialMessages]="initialMessages"
         ></app-chat-box>
       </div>
-      <div class="col-md-3 p-0" *ngIf="!this.isHost">
+      <div class="col-md-3 p-0" >
         <app-reservation-box
           [selectedChatSession]="selectedChatSession"
           [ReservationWithProperty]="ReservationWithProperty"
