--- a/src/app/pages/property-info/property-info.html
+++ b/src/app/pages/property-info/property-info.html
@@ -4,8 +4,8 @@
 <div class="container-lg d-flex flex-column">
 
   <div class="property-details-box mt-2 d-flex justify-content-between flex-wrap ">
-    <div class="d-flex flex-column ">
-      <div class="col-md-12">
+    <div class="d-flex flex-column align-items-center">
+      <div class="col-md-12 d-flex justify-content-center">
         <!-- property info, description, amenities, etc. -->
         <app-amenities-section 
         [propertyId]="propertyId"
@@ -14,7 +14,7 @@
       </div>
       <div class="col-md-12 fixed-reserve">
         <!-- <app-reverse-section ></app-reverse-section> -->
-        <div class="col-md-12">
+        <div class="col-md-12 d-flex justify-content-center">
 
           <app-BookingCalendar 
               [propertyId]="propertyId" 
@@ -27,7 +27,7 @@
         </div>
       </div>
     </div>
-    <div  class="bookinCalender  position-relative" style="position: relative !important;">
+    <div  class="bookinCalender position-relative" style="position: relative !important;">
       <!-- <div class="row"> -->
       <!-- <div class="col-md-8">
 
@@ -65,6 +65,10 @@
 
   <div class="mapSection mt-15 mx-auto col-12">
     <app-mapLocation [propertyId]="propertyId"></app-mapLocation>
+  </div>
+
+  <div class="d-flex justify-content-end">
+    <p class="border-1 px-2 py-1">Report violation</p>
   </div>
 </div>
 
