--- a/src/app/pages/add-property/step-2/step2-4-title/step2-4-title.html
+++ b/src/app/pages/add-property/step-2/step2-4-title/step2-4-title.html
@@ -12,10 +12,11 @@
         #titleInput
         class="title-textarea"
         rows="3"
-        maxlength="32"
+        [maxlength]="maxLength"
         placeholder=" "
         [(ngModel)]="title"
         (input)="onInput()"
+        (keypress)="onKeyPress($event)"
       ></textarea>
       <div class="character-counter" [class.limit-reached]="limitReached">
         <span>{{ charCount }}</span>/{{ maxLength }}
