--- a/src/app/pages/add-property/step-2/step2-3-3-photos-ta-da/step2-3-3-photos-ta-da.html
+++ b/src/app/pages/add-property/step-2/step2-3-3-photos-ta-da/step2-3-3-photos-ta-da.html
@@ -27,7 +27,11 @@
         >
           <img [src]="photo" alt="Property photo" />
           <div *ngIf="i === 0" class="photo-caption">Cover Photo</div>
-          <!-- Photo options button hidden or disabled since removePhoto is not available in TS -->
+          <button class="delete-button" (click)="removePhoto(i)" *ngIf="photos.length > 5">
+            <svg viewBox="0 0 32 32" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M7 7L25 25M25 7L7 25"></path>
+            </svg>
+          </button>
         </div>
       </ng-container>
 
